src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  /* outline: 1px solid tomato; */
  color: white;
  font-family: sans-serif;
}

body{
  background-color: black;
  /* overflow-y: hidden; */
}

li{
  list-style: none;
}

#root{
  display: flex;
  height: 100vh;
  width: 100vw;
  justify-content: center;
}

